fix transformation math / remove gl-matrix

--- a/packages/physics/package.json
+++ b/packages/physics/package.json
@@ -18,13 +18,14 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@dimforge/rapier3d": "^0.11.2",
-    "gl-matrix": "^4.0.0-beta.1"
+    "@dimforge/rapier3d": "^0.11.2"
   },
   "devDependencies": {
     "@houseki-engine/core": "workspace:^",
     "@houseki-engine/scene": "workspace:^",
+    "@types/three": "~0.154.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "three": "~0.154.0",
     "thyseus": "0.14.0",
     "typescript": "~5.2.2",
     "vite": "^4.4.7",
@@ -34,6 +35,7 @@
   "peerDependencies": {
     "@houseki-engine/core": "workspace:^",
     "@houseki-engine/scene": "workspace:^",
+    "three": "*",
     "thyseus": "*"
   },
   "publishConfig": {
